# OAuth2.0

./: .dockerignore  Cargo.toml  README.md  docker-compose.yaml  postman_collection.json  public.pem  unsafe-private.pem
authorization-server/: .env  Cargo.toml  Dockerfile
authorization-server/src/: authorize.rs  jwks.rs  lib.rs  main.rs  register.rs  router.rs  token.rs
authorization-server/tests/: authorization_code_flow.rs  client_registration.rs
client/: Cargo.toml
client/src/: main.rs
resource-server/: .env  Cargo.toml  Dockerfile
resource-server/src/: lib.rs  main.rs  protected_resource.rs  router.rs
tests/: integration_test.rs
