[workspace]
members = [
    "authorization-server",
    "resource-server",
    "client"
]

[workspace.dependencies]
axum = "0.8"
axum-macros = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16", features = ["v4"] }
url = "2.5"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
jsonwebtoken = "8.2"
dotenvy = "0.15"
base64 = "0.22"
tower = "0.5"
