[package]
name = "resource-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-macros.workspace = true
base64.workspace = true
dotenvy.workspace = true
hyper = "0.14"
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
url.workspace = true
uuid.workspace = true
rsa = "0.8"
reqwest.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["full"] }

[[bin]]
name = "resource-server"
path = "src/main.rs"
